--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
         <ImageView
             android:id="@+id/header_img"
-            android:src="@drawable/yui_header"
+            android:src="#999"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
